WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195852
REGRESSION (
r242807
): Unified sources build failure from missing imports
https://bugs.webkit.org/show_bug.cgi?id=195852
Summary
REGRESSION (r242807): Unified sources build failure from missing imports
Timothy Hatcher
Reported
2019-03-16 10:35:28 PDT
/Volumes/Data/EWS/WebKit/WebKitBuild/WebKit.build/Release-iphonesimulator/WebKit.build/Objects-normal/x86_64/UnifiedSource32-mm.o In file included from /Volumes/Data/EWS/WebKit/WebKitBuild/Release-iphonesimulator/DerivedSources/WebKit2/unified-sources/UnifiedSource32-mm.mm:1: /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:82:1: error: unknown type name 'SOFT_LINK_PRIVATE_FRAMEWORK' SOFT_LINK_PRIVATE_FRAMEWORK(BackBoardServices) ^ /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:82:47: error: expected ';' after top level declarator SOFT_LINK_PRIVATE_FRAMEWORK(BackBoardServices) ^ ; /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:393:12: error: use of undeclared identifier 'BKSDisplayBrightnessGetCurrent' return BKSDisplayBrightnessGetCurrent(); ^ /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:399:76: error: use of undeclared identifier 'BKSDisplayBrightnessGetCurrent' pool->sendToAllProcesses(Messages::WebProcess::BacklightLevelDidChange(BKSDisplayBrightnessGetCurrent())); ^ /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:450:146: error: use of undeclared identifier 'UIBacklightLevelChangedNotification' CFNotificationCenterAddObserver(CFNotificationCenterGetDarwinNotifyCenter(), this, backlightLevelDidChangeCallback, static_cast<CFStringRef>(UIBacklightLevelChangedNotification), nullptr, CFNotificationSuspensionBehaviorCoalesce); ^ /Volumes/Data/EWS/WebKit/Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:473:116: error: use of undeclared identifier 'UIBacklightLevelChangedNotification' CFNotificationCenterRemoveObserver(CFNotificationCenterGetDarwinNotifyCenter(), this, static_cast<CFStringRef>(UIBacklightLevelChangedNotification) , nullptr); ^ 6 errors generated.
Attachments
Patch
(1.43 KB, patch)
2019-03-16 10:40 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(1.45 KB, patch)
2019-03-16 11:00 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2019-03-16 10:40:27 PDT
Created
attachment 364935
[details]
Patch
Timothy Hatcher
Comment 2
2019-03-16 11:00:55 PDT
Created
attachment 364936
[details]
Patch
WebKit Commit Bot
Comment 3
2019-03-16 11:38:51 PDT
Comment on
attachment 364936
[details]
Patch Clearing flags on attachment: 364936 Committed
r243042
: <
https://trac.webkit.org/changeset/243042
>
WebKit Commit Bot
Comment 4
2019-03-16 11:38:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-03-16 11:39:19 PDT
<
rdar://problem/48954938
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug