REGRESSION (r242807): Unified sources build failure from missing imports. https://bugs.webkit.org/show_bug.cgi?id=195852

Unreviewed speculative build fix.


* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
Include <wtf/SoftLinking.h> and "UIKitSPI.h" on iOS.


Canonical link: https://commits.webkit.org/210125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@243042 268f45cc-cd09-0410-ab3c-d52691b4dbfc